--- a/setting.html
+++ b/setting.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="status-bar__cloumn">
-        <span>02:46</span>
+        <span class="date">00:00</span>
       </div>
       
       <div class="status-bar__cloumn">
@@ -103,5 +103,7 @@
       src="https://kit.fontawesome.com/347ea66aaf.js"
       crossorigin="anonymous"
     ></script>
+    
+    <script src="javascript/clock.js"></script>
   </body>
 </html>
