--- a/chat-2.html
+++ b/chat-2.html
@@ -13,8 +13,8 @@
         <i class="fas fa-wifi"></i>
       </div>
 
-      <div class="status-bar__cloumn">
-        <span>02:46</span>
+      <div class="status-bar__cloumn date">
+        <span>00:00</span>
       </div>
 
       <div class="status-bar__cloumn">
@@ -83,5 +83,6 @@
       src="https://kit.fontawesome.com/347ea66aaf.js"
       crossorigin="anonymous"
     ></script>
+    <script src="javascript/clock.js"></script>
   </body>
 </html>
