--- a/find.html
+++ b/find.html
@@ -14,8 +14,8 @@
         <i class="fas fa-wifi"></i>
       </div>
 
-      <div class="status-bar__cloumn">
-        <span>02:46</span>
+      <div class="status-bar__cloumn date">
+        <span>00:00</span>
       </div>
       
       <div class="status-bar__cloumn">
@@ -148,5 +148,7 @@
       src="https://kit.fontawesome.com/347ea66aaf.js"
       crossorigin="anonymous"
     ></script>
+    
+    <script src="javascript/clock.js"></script>
   </body>
 </html>
